Adding base flask app

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,19 @@
 
 # node modules
 node_modules/
+
+# flask generated
+venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
