--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
-    }
+    },
+    "python.linting.enabled": true,
+    "python.pythonPath": "C:\\Users\\Carso\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
