--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
         "**/.factorypath": true
     },
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Users\\Carso\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Python39\\python.exe"
 }
